--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -23,7 +23,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/home_bg_gradient"
                     android:scaleType="centerCrop"
                     android:src="@drawable/bg" />
 
