--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -231,7 +231,7 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/cashout"/>
+                            android:src="@drawable/ic_diagonal_arrow"/>
                     </LinearLayout>
 
                     <LinearLayout
