--- a/app/src/main/res/layout/id_information_card.xml
+++ b/app/src/main/res/layout/id_information_card.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
-        android:id="@+id/layout_id_info"
+        android:id="@+id/layout_id_info_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="ID Information"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccentBlue"
             android:textStyle="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"/>
@@ -32,7 +33,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_id_info"
+        app:layout_constraintTop_toBottomOf="@id/layout_id_info_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="4dp"
@@ -44,16 +45,16 @@
         android:layout_height="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view"
-        app:layout_constraintEnd_toStartOf="@id/layout_id_number"
         android:src="@drawable/add_default_image"/>
 
     <LinearLayout
         android:id="@+id/layout_id_type"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toEndOf="@id/img_id_front"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view"
         app:layout_constraintBottom_toTopOf="@id/layout_id_number">
 
         <ImageView
@@ -71,7 +72,6 @@
             android:layout_weight="1"
             android:text="ID Type"
             android:alpha="1.0"
-            android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:gravity="center_vertical"/>
     </LinearLayout>
@@ -79,9 +79,10 @@
     <LinearLayout
         android:id="@+id/layout_id_number"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/layout_id_type"
+        app:layout_constraintBottom_toTopOf="@id/layout_expiry_date"
         app:layout_constraintStart_toEndOf="@id/img_id_front"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -100,18 +101,18 @@
             android:text="ID Number"
             android:alpha="1.0"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical"/>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_expiry_date"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/layout_id_number"
         app:layout_constraintStart_toEndOf="@id/img_id_front"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -127,7 +128,6 @@
             android:text="Expiry Date"
             android:alpha="1.0"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
