--- a/app/src/main/res/layout/personal_information_card.xml
+++ b/app/src/main/res/layout/personal_information_card.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/dimen_5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
-        android:id="@+id/layout_id_info"
+        android:id="@+id/layout_id_info_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="Personal Information"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccentBlue"
             android:textStyle="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"/>
@@ -34,7 +34,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_id_info"
+        app:layout_constraintTop_toBottomOf="@id/layout_id_info_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="4dp"
@@ -68,7 +68,6 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text=":"
-            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"  />
         <TextView
             android:id="@+id/text_view_id_type"
@@ -78,7 +77,6 @@
             android:layout_weight="1"
             android:text="27 Nov 1987"
             android:alpha="1.0"
-            android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:gravity="center_vertical"/>
     </LinearLayout>
@@ -111,7 +109,6 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text=":"
-            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"  />
         <TextView
             android:id="@+id/text_view_id_number"
@@ -122,7 +119,6 @@
             android:text="Male"
             android:alpha="1.0"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical"/>
     </LinearLayout>
 
@@ -153,7 +149,6 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text=":"
-            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"  />
         <TextView
             android:id="@+id/text_view_expiry_date"
@@ -164,7 +159,6 @@
             android:text="John Mugwanya"
             android:alpha="1.0"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical"/>
     </LinearLayout>
 
@@ -196,7 +190,6 @@
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:text=":"
-            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"  />
         <TextView
             android:id="@+id/text_view_purchase_service"
@@ -207,7 +200,6 @@
             android:text="Food Purchase"
             android:alpha="1.0"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical"/>
     </LinearLayout>
 
