--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -176,6 +176,7 @@
                             </RelativeLayout>
 
                             <RelativeLayout
+                                android:id="@+id/personal_information_layout"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:paddingTop="6dp"
