--- a/app/src/main/res/layout/business_information.xml
+++ b/app/src/main/res/layout/business_information.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -38,17 +38,17 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_20dp"
                     android:layout_marginEnd="@dimen/dimen_20dp"
                     android:layout_marginBottom="@dimen/dimen_20dp"
-                    android:padding="15dp"
+                    android:background="@color/white"
                     android:orientation="vertical"
-                    android:background="@color/white">
-
-
+                    android:paddingTop="@dimen/margin_15"
+                    android:paddingBottom="@dimen/margin_15">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -71,22 +71,23 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@android:color/transparent"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:padding="6dp"
-                            android:background="@android:color/transparent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                            app:layout_constraintTop_toTopOf="parent" />
 
                     </RelativeLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:gravity="start"
                         android:text="Business Location"
                         android:textColor="@android:color/black"
-                        android:layout_marginTop="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -101,24 +102,24 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@android:color/transparent"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:padding="6dp"
-                            android:background="@android:color/transparent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
-
 
                     </RelativeLayout>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="center_vertical"
                         android:text="Registration No."
-                        android:textColor="@android:color/black"
-                        android:gravity="center_vertical"
-                        android:layout_marginTop="@dimen/margin_10"/>
+                        android:textColor="@android:color/black" />
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
@@ -129,24 +130,24 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@android:color/transparent"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:padding="6dp"
-                            android:background="@android:color/transparent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                     </RelativeLayout>
 
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="center_vertical"
                         android:text="License No."
-                        android:textColor="@android:color/black"
-                        android:gravity="center_vertical"
-                        android:layout_marginTop="@dimen/margin_10"/>
+                        android:textColor="@android:color/black" />
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
@@ -157,25 +158,23 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:background="@android:color/transparent"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:padding="6dp"
-                            android:background="@android:color/transparent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                     </RelativeLayout>
 
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Upload Documents"
+                        android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="10dp"/>
-
+                        android:text="Upload Documents"
+                        android:textColor="@color/black" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -187,69 +186,75 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Registration Cert."
-                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toTopOf="@id/img_id_front"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintBottom_toTopOf="@id/img_id_front"/>
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <ImageView
                             android:id="@+id/img_id_front"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front"
+                            android:src="@drawable/add_default_image"
                             app:layout_constraintEnd_toStartOf="@id/img_id_back"
-                            android:src="@drawable/add_default_image"/>
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+
                         <TextView
                             android:id="@+id/text_view_back"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Trade License"
-                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toTopOf="@id/img_id_back"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toTopOf="@id/img_id_back"/>
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <ImageView
                             android:id="@+id/img_id_back"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
-                            app:layout_constraintStart_toEndOf="@id/img_id_front"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front"
+                            android:src="@drawable/add_default_image"
                             app:layout_constraintEnd_toEndOf="parent"
-                            android:src="@drawable/add_default_image"/>
+                            app:layout_constraintStart_toEndOf="@id/img_id_front"
+                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
+
                         <Button
-                            android:layout_weight="1"
                             android:id="@+id/previous_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="5dp"
-                            android:textColor="@color/white"
-                            android:textStyle="bold"
+                            android:layout_weight="1"
                             android:background="@drawable/rectangular_green_solid"
-                            android:text="@string/submit" />
+                            android:text="@string/submit"
+                            android:textColor="@color/white"
+                            android:textStyle="bold" />
 
                         <Button
-                            android:layout_weight="1"
                             android:id="@+id/next_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="5dp"
                             android:layout_marginEnd="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rectangular_red_solid"
                             android:text="@string/cancel"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:background="@drawable/rectangular_red_solid"/>
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                 </LinearLayout>
 
             </ScrollView>
+
         </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
