--- a/app/src/main/res/layout/fragment_business_information.xml
+++ b/app/src/main/res/layout/fragment_business_information.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.PersonalInformationFragment">
+        tools:context=".fragments.BusinessInformationFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dimen_20dp"
-                android:text="Enter Employment Information and Earn 20 Credit Score Points"
+                android:text="Enter ID Information and Earn 10 Credit Score Points"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -53,8 +53,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_10"
                         android:gravity="start"
-                        android:text="Employer"
+                        android:text="Business Name"
                         android:textColor="@android:color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +72,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="4dp"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -85,7 +86,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="start"
-                        android:text="Designation"
+                        android:text="Business Location"
                         android:textColor="@android:color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +103,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="4dp"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -113,14 +114,11 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:gravity="start"
-                        android:text="Location"
-                        android:textColor="@android:color/black"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="center_vertical"
+                        android:text="Registration No."
+                        android:textColor="@android:color/black" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -133,7 +131,35 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="4dp"
+                            android:padding="6dp"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="center_vertical"
+                        android:text="License No."
+                        android:textColor="@android:color/black" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:background="@android:color/transparent"
+                            android:padding="6dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -147,67 +173,51 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
-                        android:text="Contact"
+                        android:text="Upload Documents"
                         android:textColor="@color/black" />
 
-
-                    <LinearLayout
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/edittext_corner"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
 
                         <TextView
-                            android:id="@+id/text_country_code"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.3"
-                            android:background="@drawable/edittext_left_corners_green"
-                            android:gravity="center"
-                            android:text="+256"
-                            android:textColor="@color/white"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <EditText
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.7"
-                            android:background="@android:color/transparent"
-                            android:inputType="phone"
-                            android:maxLength="9"
-                            android:padding="6dp"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center_vertical"
-                        android:text="Employee ID"
-                        android:textColor="@color/black" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
-                        android:background="@drawable/edittext_corner">
-
-                        <EditText
-                            android:layout_width="match_parent"
+                            android:id="@+id/text_view_front"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:background="@android:color/transparent"
-                            android:padding="4dp"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:text="Registration Cert."
+                            app:layout_constraintBottom_toTopOf="@id/img_id_front"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                    </RelativeLayout>
+                        <ImageView
+                            android:id="@+id/img_id_front"
+                            android:layout_width="150dp"
+                            android:layout_height="120dp"
+                            android:src="@drawable/add_default_image"
+                            app:layout_constraintEnd_toStartOf="@id/img_id_back"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+
+                        <TextView
+                            android:id="@+id/text_view_back"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Trade License"
+                            app:layout_constraintBottom_toTopOf="@id/img_id_back"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/img_id_back"
+                            android:layout_width="150dp"
+                            android:layout_height="120dp"
+                            android:src="@drawable/add_default_image"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/img_id_front"
+                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -244,6 +254,7 @@
                 </LinearLayout>
 
             </ScrollView>
+
         </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
